--- a/maven.properties
+++ b/maven.properties
@@ -10,16 +10,16 @@ maven.info=Android UI component to process banking 3D Secure (MasterCard SecureC
 maven.version=1.3.0
 
 # VCS tag to reference this version sources
-maven.version.tag=v1.1.2.9
+maven.version.tag=1.3.0
 
 # Project homepage url
-maven.url.home=https://github.com/livotovlabs/3DSView
+maven.url.home=https://github.com/Beebs-Company/3DSView
 
 # Project vcs root url (to be used for clone/checkout)
-maven.url.vcs=https://github.com/livotovlabs/3DSView.git
+maven.url.vcs=https://github.com/Beebs-Company/3DSView.git
 
 # Project bugs tracker url
-maven.url.issues=https://github.com/livotovlabs/3DSView/issues
+maven.url.issues=https://github.com/Beebs-Company/3DSView/issues
 
 # Main developer information
 maven.developer.name=Dmitri Livotov
